--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -920,6 +920,14 @@ background-repeat:no-repeat;
 background-image:url(%%ccconfused%%);
 }
 
+a[href|="/cclaugh"] {
+float:left;
+width:160px;
+height:119px;
+background-repeat:no-repeat;
+background-image:url(%%cclaugh%%);
+}
+
 /*un-assigned end*/
 
 a.author[href$="LunarMist2"] {  
