--- a/source-css/idliketobeatree.css
+++ b/source-css/idliketobeatree.css
@@ -194,7 +194,7 @@ a[href|="/st00"], a[href|="/st01"], a[href|="/st02"], a[href|="/st03"], a[href|=
 a[href|="/st07"], a[href|="/st08"], a[href|="/st09"], a[href|="/st10"], a[href|="/st11"], a[href|="/st12"], a[href|="/st13"], 
 a[href|="/st14"], a[href|="/st15"], a[href|="/st16"], a[href|="/st17"], a[href|="/st18"], a[href|="/st19"], a[href|="/st20"], 
 a[href|="/st21"], a[href|="/st22"], a[href|="/st23"], a[href|="/st24"], a[href|="/st25"], a[href|="/st26"], a[href|="/st27"], 
-a[href|="/st28"], a[href|="/st29"] {
+a[href|="/st28"], a[href|="/st29"], a[href|="/st03"] {
     display: block;
     clear: none;
     float: left;
@@ -202,7 +202,7 @@ a[href|="/st28"], a[href|="/st29"] {
     height: 70px;
     background-image: url(%%Eemotes%%) !important
     }
-a[href|="/rst00"], a[href|="/rst01"], a[href|="/rst02"], a[href|="/rst03"], a[href|="/rst04"], a[href|="/rst05"], a[href|="/rst06"], a[href|="/rst07"], a[href|="/rst08"], a[href|="/rst09"], a[href|="/rst10"], a[href|="/rst11"], a[href|="/rst12"], a[href|="/rst13"], a[href|="/rst14"], a[href|="/rst15"], a[href|="/rst16"], a[href|="/rst17"], a[href|="/rst18"], a[href|="/rst19"], a[href|="/rst20"], a[href|="/rst21"], a[href|="/rst22"], a[href|="/rst23"], a[href|="/rst24"], a[href|="/rst25"], a[href|="/rst26"], a[href|="/rst27"], a[href|="/rst28"], a[href|="/rst29"] {
+a[href|="/rst00"], a[href|="/rst01"], a[href|="/rst02"], a[href|="/rst03"], a[href|="/rst04"], a[href|="/rst05"], a[href|="/rst06"], a[href|="/rst07"], a[href|="/rst08"], a[href|="/rst09"], a[href|="/rst10"], a[href|="/rst11"], a[href|="/rst12"], a[href|="/rst13"], a[href|="/rst14"], a[href|="/rst15"], a[href|="/rst16"], a[href|="/rst17"], a[href|="/rst18"], a[href|="/rst19"], a[href|="/rst20"], a[href|="/rst21"], a[href|="/rst22"], a[href|="/rst23"], a[href|="/rst24"], a[href|="/rst25"], a[href|="/rst26"], a[href|="/rst27"], a[href|="/rst28"], a[href|="/rst29"], a[href|="/rst03"] {
     display: block;
     clear: none;
     float: left;
@@ -418,8 +418,8 @@ font-size: small;
 }
 /* ---------- Sidebar Image ---------- */
 .side {
-    padding-top: 168px;
-    background-image: url(%%spikeweedsidebar%%) !important;
+    padding-top: 198px;
+    background-image: url(%%scootsweetside%%) !important;
     background-repeat: no-repeat !important;
     background-position: 0px 3px !important
     }
