--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -8,7 +8,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%coggledreambanner%%) 50% 0px !important;
+   background: url(%%PwnyBanner%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -863,7 +863,7 @@ a.author[href$=herabek]:before {content:"420 BLAZE IT FGT"}
 a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseMoonAsses" }
 a.author[href$=Zovistograt]:before { content:'[](/ww20 “Needy Bitch”)' }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
-a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in the Clouds" }
+a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in my Butts" }
 a.author[href$=Swiftskii]:before { content:"FairyFacedWizardFelcher" }
 a.author[href$=Lord_Ninka]:before { content:"Nimpa" }
 a.author[href$=LlamaInDrag]:before { content:"A REAL FUCKING DINOSAUR" }
