--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -149,7 +149,7 @@ a[href|="/sp"]
 
 /*Replaces self post and NSFW thumbnail with Fine Line*/
 .thumbnail.self {
-    background-image: url(%%test%%);
+    background-image: url(%%flselfthumbnail22%%);
     background-repeat: no-repeat;
     width: 70px;
     height: 70px;
