--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -619,6 +619,15 @@ a[href|="/twusquint"] {
     height: 70px;
     background-image: url(%%twusquint%%) 
     }
+a[href|="/ppgoon"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 129px;
+    background-image: url(%%pinkiefacesmall%%) 
+    }
+
 
 /*Side Bar*/
 
