--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -49,6 +49,13 @@ height: 0x;
 }
 
 
+#header-bottom-right #userbarToggle {
+    color: #DDD;
+    background-color: #FFAAFF;
+    border-right: 2px solid #DDD;
+    border-radius: 0px 0px 0px 7px;
+}
+
 #header .pagename.redditname a {
     background: url(%%animatedheader%%) 0px 0px no-repeat;
     width: 1100px;
