--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -170,6 +170,9 @@ html:lang(nv) .side p a[href="http://nv.reddit.com/r/TheBestPony/"] {
 .flair-syn {
     background-position: 0px -128px
     }
+.flair-wing {
+    background-position: 0px -144px
+    }
 /*********
 *usernames*
 *********/
